--- a/sample.html
+++ b/sample.html
@@ -11,7 +11,7 @@
           <div class="row gx-0">
         <ol start="4">
           <li>
-            Singapore <strong>103657</strong> together with payment of Singapore Dollars <input type="text" placeholder="Amount" /> only <input type="text" placeholder="SGD" /> (being <input type="text" placeholder="percentage" />  percent <input type="text" placeholder="%" />
+            Singapore <strong>103657</strong> together with pa of  Dollars <input type="text" placeholder="Amount" /> only <input type="text" placeholder="SGD" /> (being <input type="text" placeholder="percentage" />  percent <input type="text" placeholder="%" />
             of the sale price less Option Money), which together with the Option Money shall constitute the “Deposit” for the purchase.
             </li>
            <li>
