--- a/sample.html
+++ b/sample.html
@@ -12,8 +12,9 @@
         <ol start="4">
           <li>
             Singapore <strong>103657</strong> together <input type="text" placeholder="Amount" /> only <input type="text" placeholder="SGD" /> (being <input type="text" placeholder="percentage" />  percent <input type="text" placeholder="%" />
-            of the sale price less Option Money), which together with the Option Money shall constitute the “Deposit” for the purchase.
+            of the sale price less Option Money), which together with the Optioshall constitute the “Deposit” for the purchase.
             </li>
+            <li>commit the changes</li>
            <li>
             Save as provided in clause 4 of the Conditions (as defined in Clause 6 below), if the Purchaser does not exercise this Option in the manner stipulated in Clause 3 above, this Option will be null and void, and the Option Money will be forfeited to the benefit of the Vendor.
           </li>  
