--- a/sample.html
+++ b/sample.html
@@ -15,6 +15,7 @@
             of the sale price less Option Money), which together with the Optioshall constitute the “Deposit” for the purchase.
             </li>
             <li>commit the changes</li>
+            <h1>Adding a new line</h1>
            <li>
             Save as provided in clause 4 of the Conditions (as defined in Clause 6 below), if the Purchaser does not exercise this Option in the manner stipulated in Clause 3 above, this Option will be null and void, and the Option Money will be forfeited to the benefit of the Vendor.
           </li>  
