--- a/sample.html
+++ b/sample.html
@@ -16,6 +16,7 @@
             </li>
             <li>commit the changes</li>
             <h1>Adding a new line</h1>
+            <h1>Adding another line</h1>
            <li>
             Save as provided in clause 4 of the Conditions (as defined in Clause 6 below), if the Purchaser does not exercise this Option in the manner stipulated in Clause 3 above, this Option will be null and void, and the Option Money will be forfeited to the benefit of the Vendor.
           </li>  
